--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,9 @@ body {
     margin: 0 0 0 var(--chat-width);
     font-family: cursive;
     font-size: 18px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-color: blue;
 }
 
 /* ------------------------------------------------------------------------- */
@@ -151,7 +153,7 @@ h6 {
    overflow: hidden;
    padding-right: 1cm;
    padding-left: 0cm;
-   /* overflow: hidden; */
+   overflow: auto;
    
 }
 
@@ -171,11 +173,13 @@ h6 {
 }
 
 #loginModal{
+  position: relative;
     height: 100%;
     width: 100%;
 }
 
 #regModal {
+  position: relative;
     height: 100%;
     width: 100%;
 }
@@ -271,12 +275,11 @@ h6 {
 
 #happyFace {
     margin-bottom: 0;
-    padding-left: 5cm;
 }
 
 #byeFace {
     margin-bottom: 0;
-    padding-left: 5cm;
+
 }
 
 #profilePic {
@@ -299,24 +302,51 @@ h6 {
     background-size: 100%;
     padding-top: .75cm;
     padding-left: 1cm;
+    padding-bottom: .75cm;
     padding-right: 1cm;
     margin-left: 2cm;
     margin-right: 5cm;
     margin-bottom: 2cm;
     color:whitesmoke;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-family:cursive;
     height: 30vh;
     width: 90vh;
-    display: flex;
+    display: block;
     flex-direction: column;
     box-shadow: 2px 2px 2px 2px white;
 }
 
-.post-content{
-    text-align: justify;
-    height: 5%;
-    margin: 1% auto;
+/* .posts-content{
+  display: inline-block;
+  height: 30vh;
+  width: 90vh;
+} */
+
+.expandedPosts{
+  border-radius: 25px;
+  background-image: url('/css/img/canvas.png');
+  background-size: 100%;
+  padding-top: .75cm;
+  padding-left: 1cm;
+  padding-right: 1cm;
+  margin-left: 2cm;
+  margin-right: 5cm;
+  margin-bottom: 2cm;
+  color:whitesmoke;
+  font-size: 1.5rem;
+  font-family:cursive;
+  height: 30vh;
+  width: 90vh;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 2px 2px white;
+}
+
+.expandedPosts-content{
+  text-align: justify;
+  height: 100%;
+  width: 100%;
 }
 /* end */
 
@@ -325,6 +355,9 @@ h6 {
 /* comments */
 .comment-content{
     height: 15px;
+    visibility: hidden;
+    background-color:  rgb(136, 200, 176);
+    color: rgb(15, 15, 120);
 }
 
 .comment{
@@ -333,6 +366,7 @@ h6 {
     font-family: cursive;
     height: 5%;
     width: 200px;
+    visibility: hidden;
 }
 
 .commentBlock{
@@ -340,13 +374,15 @@ h6 {
     overflow: auto;
     display: none;
     z-index: 1;
-    background-color:cornflowerblue;
+    background-image: url('/css/img/canvas.png');
     border-radius: 30px;
+    visibility: hidden;
 }
 
 .comment-container p{
     display: inline;
     height: 150px;
+    visibility: hidden;
 }
 
 /* end */
@@ -414,16 +450,113 @@ h6 {
 }
 
 .postBtn{
-    visibility: hidden;
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
 }
 
-.commentBtn{
-    visibility: visible;
+.postBtn:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
+.CommentBtn{
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
+}
+
+.CommentBtn:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
 }
 
 .HideComment{
-    visibility: hidden;
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
 }
+
+.HideComment:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
+.ShowComments{
+  display: inline-block;
+  background-image: url('/css/img/canvas.png');
+  background-size: 105%;
+  background-repeat: no-repeat;
+  margin-top: .20cm;
+  margin-bottom: .20cm;
+  margin-left: .1cm;
+  border-radius: 25px;
+  box-shadow: 1px 1px 1px 1px white;
+  border-color: white;
+  color: whitesmoke;
+  font-size: 1rem;
+  font-family:cursive;
+  font-weight: bolder;
+  width: 45%;
+  visibility: hidden;
+
+}
+
+.ShowComments:hover{
+background-image: none;
+background-color: rgb(136, 200, 176);
+color: rgb(15, 15, 120);
+font-weight: bolder;
+}
+
 
 /* end */
 
