private chat bubbles improved

--- a/templates/home.html
+++ b/templates/home.html
@@ -85,8 +85,8 @@
                 Back
             </button>
          </div>
-          <div class="chat-title">
-            <h1 id="recipient"></h1>
+          <div >
+            <h2 class="chat-title" id="recipient"></h2>
           </div>
           <div class="messages">
             <div class="messages-content"></div>
