--- a/css/home.css
+++ b/css/home.css
@@ -400,7 +400,9 @@ h2 {
   left: 0;
   color: #e74c3c;
 }
-
+#current-user {
+  text-transform: uppercase;
+}
 /* #current-user {
   position: fixed;
   top: 0;
@@ -490,18 +492,17 @@ Chat
   position: relative;
   z-index: 2;
   background: rgba(0, 0, 0, 0.2);
-  color: #fff;
+  color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
   text-align: left;
   padding: 10px 10px 10px 50px;
-}
-.chat-title h1,
-.chat-title h2 {
-  font-weight: normal;
-  font-size: 10px;
+
+  /* font-weight: bolder;
+  font-size: 10px; */
   margin: 0;
   padding: 0;
 }
+
 .chat-title h2 {
   color: rgba(255, 255, 255, 0.5);
   font-size: 8px;
@@ -535,13 +536,42 @@ Chat
   position: relative;
   width: 100%;
 }
-.messages .messages-content {
+.messages-content {
   position: relative;
   top: 0;
   left: 0;
   height: 101%;
   width: 100%;
+
+  clear: both;
+  float: left;
+  padding: 6px 10px 7px;
+  border-radius: 10px 10px 10px 0;
+  background: rgba(0, 0, 0, 0.3);
+  margin: 8px 0;
+  font-size: 11px;
+  line-height: 1.4;
+  /* margin-left: 3px; */
+  position: relative;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
+
+.messages-content .sender {
+  float: right;
+  color: #fff;
+  text-align: right;
+  background: linear-gradient(120deg, #248a52, #257287);
+  border-radius: 10px 10px 0 10px;
+}
+
+.messages-content .recipient {
+  float: left;
+  color: #fff;
+  text-align: left;
+  background: linear-gradient(120deg, #248a52, #257287);
+  border-radius: 10px 10px 10px 0;
+}
+
 .messages .message {
   clear: both;
   float: left;
