chats working real-time achieved

--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
             <h2 class="chat-title" id="recipient"></h2>
           </div>
           <div class="messages">
-            <div class="messages-content"></div>
+            <div class="messages-content" id="log"></div>
           </div>
           <div class="message-box" id ="message-box">
             <input
