--- a/css/home.css
+++ b/css/home.css
@@ -537,14 +537,13 @@ Chat
   width: 100%;
 }
 .messages-content {
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 101%;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
 
+  height: 400px;
+  width: 100%;
+  overflow-y: auto;
   clear: both;
-  float: left;
   padding: 6px 10px 7px;
   border-radius: 10px 10px 10px 0;
   background: rgba(0, 0, 0, 0.3);
@@ -557,48 +556,37 @@ Chat
 }
 
 .messages-content .sender {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   float: right;
   color: #fff;
   text-align: right;
   background: linear-gradient(120deg, #248a52, #257287);
   border-radius: 10px 10px 0 10px;
+  width: max-content;
+  padding: 5px;
+  height: 20px;
+  margin-bottom: 5px;
 }
 
 .messages-content .recipient {
-  float: left;
+  /* float: left; */
+  width: max-content;
   color: #fff;
   text-align: left;
   background: linear-gradient(120deg, #248a52, #257287);
   border-radius: 10px 10px 10px 0;
+  margin-bottom: 5px;
+  padding: 5px;
 }
 
-.messages .message {
-  clear: both;
-  float: left;
-  padding: 6px 10px 7px;
-  border-radius: 10px 10px 10px 0;
-  background: rgba(0, 0, 0, 0.3);
-  margin: 8px 0;
-  font-size: 11px;
-  line-height: 1.4;
-  margin-left: 35px;
-  position: relative;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+.messageWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
-.messages .message .timestamp {
-  position: absolute;
-  bottom: -15px;
-  font-size: 9px;
-  color: rgba(255, 255, 255, 0.3);
-}
-.messages .message::before {
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  border-top: 6px solid rgba(0, 0, 0, 0.3);
-  left: 0;
-  border-right: 7px solid transparent;
-}
+
 /* .messages .message .avatar {
   position: absolute;
   z-index: 1;
