--- a/templates/home.html
+++ b/templates/home.html
@@ -187,10 +187,10 @@
 ===========================================================================================================
  -->
 
- <div id="postListExpanded" class="posts" style="display:none">
+ <!-- <div id="postListExpanded" class="posts" style="display:none">
     <h6> EXPANDED POST WILL APPEAR HERE WITH COMMENTS ALSO</h6>
   
- </div>
+ </div> -->
 
         <!-- 
 ===========================================================================================================
