comments are adding and show comment button is working

--- a/templates/home.html
+++ b/templates/home.html
@@ -165,7 +165,7 @@
 ===========================================================================================================
  -->
 
-    <div id="postList">
+    <div id="postList" style.z-index="0">
       
     </div>
 
