--- a/css/home.css
+++ b/css/home.css
@@ -335,13 +335,12 @@ h6 {
     display: block;
     flex-direction: column;
     box-shadow: 2px 2px 2px 2px white;
+    z-index: 0;
 }
 
-/* .posts-content{
-  display: inline-block;
-  height: 30vh;
-  width: 90vh;
-} */
+.posts-content{
+z-index: 0;
+}
 
 /* .expandedPosts{
   border-radius: 25px;
@@ -384,6 +383,10 @@ end
   display:none;
 }
 
+/* #c{
+  z-index: -1;
+  background-color: red;
+} */
 
 
 .comment{
@@ -392,29 +395,30 @@ end
     font-family: cursive;
     height: 5%;
     width: 200px;
-    visibility: hidden;
+    z-index: 1;
 }
 
 .comment-content{
     height: 15px;
-    visibility: hidden;
     background-color:  rgb(136, 200, 176);
     color: rgb(15, 15, 120);
+    z-index: 1;
 }
 .commentBlock{
     height: 200px;
     overflow: auto;
     display: none;
-    z-index: 1;
+    z-index: -10;
     background-image: url('/css/img/canvas.png');
     border-radius: 30px;
+    background-size: 100%;
 }
 
 .comment-container p{
-    /* display: inline; */
-    height: 150px;
-    visibility: hidden;
-    z-index: -1;
+  display: inline-block;
+    height: 50%;
+    z-index: 1;
+    background-image: url('/css/img/canvas.png');
 }
 
 /* end */
@@ -426,6 +430,7 @@ end
     padding-bottom: .01cm;
     display: flex;
     flex-direction: column;
+    /* z-index: -1; */
 }
 
 /* -------------------------------------------- */
@@ -620,15 +625,15 @@ color: rgb(15, 15, 120);
 font-weight: bolder;
 }
 
-.commentBlock{
+/* .commentBlock{
   height: 400px;
   overflow: auto;
   display: none;
-  z-index: 1;
+  z-index: -1;
   background-image: url('/css/img/canvas.png');
   border-radius: 30px;
   background-size: 100%;
-}
+} */
 /* end */
 
 
