--- a/templates/home.html
+++ b/templates/home.html
@@ -80,14 +80,9 @@
       <div class="chat-modal" class="modal">
         <!-- <div class="modal-content animate" action="/chat" id="formChat"> -->
           <div class="chat-title-box">
-            <h3>Messenger</h3>
-            <button type="close-msg" class="message-close" id="btn" value="closeBtn" onclick="ChatReturn()">
-                Back
-            </button>
-         </div>
-          <div >
+            <button type="close-msg" class="message-close" id="btn" value="closeBtn" onclick="ChatReturn()"></button>
             <h2 class="chat-title" id="recipient"></h2>
-          </div>
+         </div>
           <div class="messages">
             <div class="messages-content" id="log"></div>
           </div>
