--- a/css/home.css
+++ b/css/home.css
@@ -403,17 +403,6 @@ h2 {
 #current-user {
   text-transform: uppercase;
 }
-/* #current-user {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: var(--nav-width);
-  height: 100vh;
-  /* background-image: url("/css/img/side.jpg"); */
-/* background-position: center; */
-/* font-family: cursive;
-  font-size: 2rem;
-} */
 
 /*~~~~~~~~~~~~~~~Start of Logged-in Users Log~~~~~~~~~~*/
 .loggedInUsers {
@@ -461,7 +450,6 @@ Chat
   transform: translate(-50%, -50%);
   width: 400px;
   height: 95vh;
-  /* max-height: 500px; */
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
@@ -524,14 +512,11 @@ Chat
   color: rgba(255, 255, 255, 0.5);
   overflow: auto;
   position: relative;
-  /* width: 100%; */
 }
 .messages-content {
   display: flex;
   flex-direction: column;
-
-  height: 400px;
-  /* width: 100%; */
+  height: 930px;
   overflow-y: auto;
   clear: both;
   padding: 6px 10px 7px;
@@ -540,22 +525,21 @@ Chat
   margin: 8px 0;
   font-size: 11px;
   line-height: 1.4;
-  /* margin-left: 3px; */
   position: relative;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .messages-content .sender {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-end; */
   float: right;
   color: #fff;
-  text-align: right;
+  text-align: left;
   background: linear-gradient(120deg, #248a52, #257287);
   border-radius: 10px 10px 0 10px;
   width: max-content;
-  padding: 5px;
+  padding: 7px;
   height: 20px;
   margin-bottom: 5px;
 }
@@ -580,93 +564,10 @@ Chat
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-}
-
-.messages .message.message-personal {
-  float: right;
-  color: #fff;
-  text-align: right;
-  background: linear-gradient(120deg, #248a52, #257287);
-  border-radius: 10px 10px 0 10px;
-}
-.messages .message.message-personal::before {
-  left: auto;
-  right: 0;
-  border-right: none;
-  border-left: 5px solid transparent;
-  border-top: 4px solid #257287;
-  bottom: -4px;
-}
-.messages .message:last-child {
-  margin-bottom: 30px;
-}
-.messages .message.new {
-  transform: scale(0);
-  transform-origin: 0 0;
-  -webkit-animation: bounce 500ms linear both;
-  animation: bounce 500ms linear both;
-}
-.messages .message.loading::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  border: none;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
-}
-.messages .message.loading span {
-  display: block;
-  font-size: 0;
-  width: 20px;
-  height: 10px;
-  position: relative;
-}
-.messages .message.loading span::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  margin-left: -7px;
-}
-.messages .message.loading span::after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  margin-left: 7px;
-  -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s;
+  margin-bottom: 5px;
+  padding: 7px;
+  padding-bottom: 5px;
+  height: 20px;
 }
 
 /*--------------------
@@ -714,23 +615,6 @@ Chat
 }
 .message-box .message-submit:hover {
   background: #1d7745;
-}
-
-/*--------------------
-  Custom Srollbar
-  --------------------*/
-.mCSB_scrollTools {
-  margin: 1px -3px 1px 0;
-  opacity: 0;
-}
-
-.mCSB_inside > .mCSB_container {
-  margin-right: 0px;
-  padding: 0 10px;
-}
-
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
 /*--------------------
