--- a/css/home.css
+++ b/css/home.css
@@ -516,8 +516,8 @@ Chat
 .messages-content {
   display: flex;
   flex-direction: column;
-  height: 930px;
-  overflow-y: auto;
+  height: 790px;
+  overflow-y: scroll;
   clear: both;
   padding: 6px 10px 7px;
   border-radius: 10px 10px 10px 0;
