--- a/templates/home.html
+++ b/templates/home.html
@@ -28,14 +28,56 @@
 
     <nav class="nav">
         <a id="current-user"></a>
-        <a id="profile" onclick="showHideUserProfile() ;" class="nav__link">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a>
         <a id ="homePage" href = "/" onclick="e.preventDefault();" class="nav__link">ℍ𝕠𝕞𝕖ℙ𝕒𝕘𝕖</a>
         <a id ="register" onclick="openReg() ;"class="nav__link" style="display:block">ℝ𝕖𝕘𝕚𝕤𝕥𝕖𝕣</a>
         <a id ="login" onclick="openLogin() ;"class="nav__link" style="display:block">𝕃𝕠𝕘𝕀𝕟</a>
         <a id ="post" onclick="refreshPosts() ;" class="nav__link">ℙ𝕠𝕤𝕥𝕤</a>
-        <!--HTA moved Logout() to buttons as it was not being called from here <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>-->   
-        <a id="logout" href="/" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>       
-        <div id="userProfile"> 
+        <a id="logout" href="/" onclick="Logout() ;" class="nav__link" style="display:none">𝕃𝕠𝕘𝕆𝕦𝕥</a>   
+
+        <a id="profile" class="nav__link" style="display:none" onclick="showHideUserProfile() ;">ℙ𝕣𝕠𝕗𝕚𝕝𝕖</a> 
+
+         <!-- happy face emoji's -->
+    <a id="happyFace" style="display:none">
+        
+    </a>
+
+    <a id="byeFace" style="display:none">
+        
+    </a>  
+    
+      <!-- loggen on configm popup -->
+      <a id="LoggedOn" style="display:none">
+        <h4>
+            You're are Logged in.
+        </h4>
+    </a>
+
+
+    <!-- registration confirmed pop-up -->
+    <div id="regConfirmed" style="display:none">
+        <h4>
+            You're are now Registered
+      
+        </h4>
+    </div>
+
+        <!-- registration invalid pop-up -->
+    <div id="regRejected" style="display:none">
+        <h4>
+            Sorry Error with Registration
+            <h5></h5>
+
+    </div>
+
+
+        <!-- loggen on configm popup -->
+        <div id="LoggedOut" style="display:none">
+            <h4>
+                You're are Logged Out.
+            </h4>
+        </div>
+
+
     </nav>
 
        <!-- 
@@ -97,16 +139,22 @@
 
     <div id="postBlock" class="posts" style="display:none">
         <label for="PostTitle">Post Title:</label>
-        <textarea name="postTitle" type="text" rows="1" cols="60" id="PostTitle" name="Title" placeholder="Enter Title..."></textarea>
+        <br>
+        <textarea name="postTitle" type="text" rows="1" cols="80" id="PostTitle" name="Title" placeholder="Enter Title..."></textarea>
+        <br>
         <label for="Post Cat">Catergory:</label>
-        <select name="cars" id="cars">
-            <option value="Weather">Weather</option>
-            <option value="Sports">Sports</option>
-            <option value="Social">Social</option>
-            <option value="Other">Other</option>
+        <br>
+        <select id="PostCat">
+            <option value="0" selected>-- Select --</option>
+            <option value="1">Sports</option>
+            <option value="2">Weather</option>
+            <option value="3">Social</option>
+            <option value="4">Other</option>
           </select>
+          <br>
         <label for="Post Content"> Content:  </label>
-        <textarea name="postinput" type="text" rows="4" cols="60" id="PostContent" name="Content" placeholder="Description..."></textarea>
+        <br>
+        <textarea name="postinput" type="text" rows="4" cols="80" id="PostContent" name="Content" placeholder="Description..."></textarea>
         <button class="button" id="addPost" type="submit" style="display:none">Create Post</button>
     </div>
 
@@ -138,7 +186,8 @@
 ===========================================================================================================
  -->
 
- <div id="postListExpanded" style="display:none">
+ <div id="postListExpanded" class="posts" style="display:none">
+    <h6> EXPANDED POST WILL APPEAR HERE WITH COMMENTS ALSO</h6>
   
  </div>
 
@@ -268,8 +317,7 @@
         
         <div class="reg-form-control">
              <label for="Email"><b>Email</b></label>
-            <!--<input id="Email" type="email" onkeydown="validation()" size="30" placeholder="Enter Email Address" name="Email" required>-->
-            <input id="Email" type="email" size="30" placeholder="Enter Email Address" name="Email" required>
+            <input id="Email" type="email" onkeydown="validation()" size="30" placeholder="Enter Email Address" name="Email" required>
             <span id="text"></span>
             <i class="fa-regular fa-circle-check"></i>
             <i class="fa-regular fa-exclamation"></i>
@@ -307,47 +355,16 @@
 -->
 
 
-    <!-- happy face emoji's -->
-    <div id="happyFace" style="display:none">
-        <img id="happyFace" src="/css/img/thumbsup.gif" height="15%" width="15%">
-    </div>
-
-    <div id="byeFace" style="display:none">
-        <img id="byeFace" src="/css/img/bye.gif" height="15%" width="15%">
-    </div>
+   
 
 
-    <!-- registration confirmed pop-up -->
-    <div id="regConfirmed" style="display:none">
-        <h4>
-            You're are now Registered
-      
-        </h4>
-    </div>
 
 
-    <!-- registration invalid pop-up -->
-    <div id="regRejected" style="display:none">
-        <h4>
-            Sorry Error with Registration
-            <h5></h5>
 
-        </h4><img src="/css/img/sad.gif" alt="" srcset="" height="25%" width="25%">
-    </div>
 
-    <!-- loggen on configm popup -->
-    <div id="LoggedOn" style="display:none">
-        <h4>
-            You're are Logged in.
-        </h4>
-    </div>
 
-        <!-- loggen on configm popup -->
-        <div id="LoggedOut" style="display:none">
-            <h4>
-                You're are Logged Out.
-            </h4>
-        </div>
+  
+
 
         <div id="logRejected" style="display:none">
             <h4>
@@ -358,31 +375,36 @@
             </h4><img src="/css/img/sad.gif" alt="" srcset="" height="25%" width="25%">
         </div>
 
-<!-- 
-    <div id="profileMod" class="modal">
-        <form class="modal-content animate" action="/login">
-        <img id="profilePic" src="/css/img/happy.gif" height="15%" width="15%">
-        <h2>🆄🆂🅴🆁-🅿🆁🅾🅵🅸🅻🅴</h2>
-        <div id="firstName">
-            <h5>First Name : </h5>
-        </div>
-        <div id="lastName">
-            <h5>Last Name : </h5>
-        </div>
-        <div id="NickName">
-            <h5>Nick Name : </h5>
-        </div>
-        <div id="Age">
-            <h5>Age : </h5>
-        </div>
-        <div id="Gender">
-            <h5>Gender : </h5>
-        </div>
-        <div id="Email">
-            <h5>Email : </h5>
-        </div>
-    </div> -->
+        <!-- 
+===========================================================================================================
+                                           PROFILE MOD                                                    
+===========================================================================================================
+-->
+
+<div id="profileMod" class="profmodal" style.display="none">
     
+    <h3>🅿🆁🅾🅵🅸🅻🅴</h3>
+    <div id="WelMsg">
+    </div>
+    <br>
+    <br>
+    <div id="firstName">
+    </div>
+    <div id="lastName">
+     
+    </div>
+    <div id="nickName">
+     
+    </div>
+    <div id="age">
+        
+    </div>
+    <div id="gender">
+ 
+    </div>
+    <div id="email">
+       
+    </div>
     
 
 </body>
@@ -400,3 +422,5 @@
 
 
 </html>
+
+
