--- a/templates/home.html
+++ b/templates/home.html
@@ -65,8 +65,7 @@
 
     <!-- Users list -->
     <nav class="loggedInUsers">
-        <a id="Select User" class="loggedInUsers__link" data-link
-          ><strong>Chat Members</strong></a
+        <a id="Select User" class="loggedInUsers__link"><strong>Chat Members</strong></a
         >
         <div id="usersLog">
           <!--<div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
@@ -99,7 +98,7 @@
           </div>
         </div>
       </div>
-    </div>
+    
 
     
 
