--- a/css/home.css
+++ b/css/home.css
@@ -15,9 +15,9 @@ body::-webkit-scrollbar {
   width: .5em;
 }
  
-body::-webkit-scrollbar-track {
+/* body::-webkit-scrollbar-track {
   backface-visibility: hidden;
-}
+} */
  
 body::-webkit-scrollbar-thumb {
   height: 200px;
@@ -112,14 +112,25 @@ h6 {
     padding-left: 3cm;
 }
 
+#wName {
+  color: aqua;
+  padding-left: 8%;
+}
+
+#current-user {
+  text-transform: uppercase;
+  color:rgb(18, 214, 18);
+  padding-left: 8%;
+}
+
 /* end */
 
 
 /* ------------------------------------------------------------------- */
 /* Right side Nav Bar */
 
-.chat {
-    position: fixed;
+/* .chat { */
+    /* position: fixed;
     top: 0;
     right:0cm;
     width: var(--chat-width);
@@ -144,9 +155,39 @@ h6 {
 .chat__link:hover {
     background-color: rgb(9, 162, 209);
     color: black;
-}
+} */
 
 /* end */
+
+/*~~~~~~~~~~~~~~~Start of Logged-in Users Log~~~~~~~~~~*/
+.loggedInUsers {
+  position: fixed;
+  top: 0;
+  right: 0cm;
+  width: 22%;
+  height: 100vh;
+  background-image: url("/css/img/side.jpg");
+  background-position: center;
+  font-family: cursive;
+  font-size: 2rem;
+  z-index: 2;
+}
+.loggedInUsers__link {
+  display: block;
+  padding: 4px 61px;
+  text-decoration: none;
+  color: aqua;
+  font-weight: 500;
+}
+.loggedInUsers__link:hover {
+  background-color: rgb(9, 162, 209);
+  color: black;
+}
+
+/* .loggedInUsers#Select User{
+  padding-left: 10%;
+
+} */
 
 
 /* -------------------------------------------------------------------- */
@@ -299,8 +340,9 @@ h6 {
    padding-left: 16.5%;
    padding-bottom: 2.5%;
    text-indent: 5% white;
-
 }
+
+
 
 /* end */
 
@@ -315,6 +357,10 @@ h6 {
 #byeFace {
     margin-bottom: 0;
 
+}
+
+#sadFace {
+  margin-bottom: 0;
 }
 
 #profilePic {
@@ -351,6 +397,7 @@ h6 {
     flex-direction: column;
     box-shadow: 2px 2px 2px 2px white;
     z-index: -1;
+    font-weight: bolder;
 }
 
 .posts-content{
@@ -426,7 +473,6 @@ end
     display: none;
     z-index: 2;
     background-image: url('/css/img/profile.png');
-    border-radius: 30px;
     background-size: 200%;
     position: relative;
     overflow: scroll;
@@ -435,6 +481,7 @@ end
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
     border-color: white;
+    padding-left: 2%;
 
 }
 
@@ -457,11 +504,13 @@ end
 
 
 
-.comment-container p{
-  color:whitesmoke;
+.comment-container{
+  color:white;
   z-index: 1;
   border-bottom: 1px;
   border-color: white;
+  padding-bottom: 2%;
+  font-weight: bolder;
 }
 
 
@@ -694,7 +743,7 @@ font-weight: bolder;
     left: 0.5em;
     right: 0.5em;
     bottom: 3em;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 #formChat {
@@ -734,16 +783,9 @@ font-weight: bolder;
 
 /* css for loggedin Users */
 #Users {
-    color: rgb(243, 247, 247);
-    font-size: 1.6rem;
-    margin-left: 2.3cm;
-
-}
-
-#Online {
-    color: greenyellow;
-    font-size: 1.6rem;
-    margin-left: 2cm;
+  color: greenyellow;
+  font-size: 1.6rem;
+  margin-left: 2cm;
 
 }
 
@@ -824,6 +866,7 @@ font-weight: bolder;
   .login-form-control label {
     display: inline-block;
     margin-bottom: 5px;
+    padding-left: 1%;
   }
   .login-form-control input {
     border: 2px solid #f0f0f0;
@@ -872,20 +915,18 @@ font-weight: bolder;
     color: #e74c3c;
   }
 
+
   *--------------------
 Chat
 --------------------*/
+
 .chat-private {
-  position: absolute;
-  top: 50%;
-  left: 90%;
+  position: fixed;
   right: 0%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 300px;
   height: 95vh;
-  /* max-height: 500px; */
-  z-index: 2;
-  overflow: hidden;
+  z-index: 4;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
@@ -900,51 +941,42 @@ Chat
 .chat-title-box {
   flex: 0 1 45px;
   position: relative;
-  z-index: 2;
   background: rgba(0, 0, 0, 0.2);
   color: #fff;
   text-transform: uppercase;
   text-align: center;
   padding: 10px 10px 10px 50px;
 }
+.message-close {
+  position: fixed;
+  color: #fff;
+  background: #248a5200;
+  background-image: url(/css/img/icons8-back-arrow-48.png);
+  background-size: 95%;
+  padding: 16px 17px;
+  height: 2.4%;
+  width: 1%;
+  margin-top: 0.615%;
+  margin-left: -4px;
+}
 .chat-title {
   flex: 0 1 45px;
-  position: relative;
-  z-index: 2;
-  background: rgba(0, 0, 0, 0.2);
-  color: #fff;
+  position: fixed;
+  color: rgb(77, 209, 221);
   text-transform: uppercase;
   text-align: left;
   padding: 10px 10px 10px 50px;
-}
-.chat-title h1,
-.chat-title h2 {
-  font-weight: normal;
-  font-size: 10px;
   margin: 0;
   padding: 0;
 }
-.chat-title h2 {
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 8px;
-  letter-spacing: 1px;
-}
-.chat-title .avatar {
-  position: absolute;
-  z-index: 1;
-  top: 8px;
-  left: 9px;
-  border-radius: 30px;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  border: 2px solid rgba(255, 255, 255, 0.24);
-}
-.chat-title .avatar img {
-  width: 100%;
-  height: auto;
+
+.chat-title#recipient{
+    color: aqua;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    background-color: rgba(0, 0, 139, 0);
+    margin-left: -1.5%;
+
 }
 /*--------------------
   Messages
@@ -952,146 +984,63 @@ Chat
 .messages {
   flex: 1 1 auto;
   color: rgba(255, 255, 255, 0.5);
-  overflow: hidden;
   position: relative;
-  width: 100%;
+
 }
-.messages .messages-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 101%;
-  width: 100%;
-}
-.messages .message {
+.messages-content {
+  display: flex;
+  flex-direction: column;
+  height: 572px;
   clear: both;
-  float: left;
   padding: 6px 10px 7px;
   border-radius: 10px 10px 10px 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(1, 17, 89, 0.634);
   margin: 8px 0;
   font-size: 11px;
-  line-height: 1.4;
-  margin-left: 35px;
   position: relative;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.344);
+
 }
-.messages .message .timestamp {
-  position: absolute;
-  bottom: -15px;
-  font-size: 9px;
-  color: rgba(255, 255, 255, 0.3);
-}
-.messages .message::before {
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  border-top: 6px solid rgba(0, 0, 0, 0.3);
-  left: 0;
-  border-right: 7px solid transparent;
-}
-/* .messages .message .avatar {
-  position: absolute;
-  z-index: 1;
-  bottom: -15px;
-  left: -35px;
-  border-radius: 30px;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  border: 2px solid rgba(255, 255, 255, 0.24);
-} */
-/* .messages .message .avatar img {
-  width: 100%;
-  height: auto;
-} */
-.messages .message.message-personal {
+.messages-content .sender {
+  /* display: flex;
+  flex-direction: row;
+  justify-content: flex-end; */
   float: right;
   color: #fff;
-  text-align: right;
+  text-align: left;
   background: linear-gradient(120deg, #248a52, #257287);
   border-radius: 10px 10px 0 10px;
+  width: max-content;
+  padding: 7px;
+  height: 20px;
+  margin-bottom: 5px;
+
 }
-.messages .message.message-personal::before {
-  left: auto;
-  right: 0;
-  border-right: none;
-  border-left: 5px solid transparent;
-  border-top: 4px solid #257287;
-  bottom: -4px;
+.messages-content .recipient {
+  /* float: left; */
+  width: max-content;
+  color: #fff;
+  text-align: left;
+  background: linear-gradient(120deg, #248a52, #257287);
+  border-radius: 10px 10px 10px 0;
+  margin-bottom: 5px;
+  padding: 5px;
+
 }
-.messages .message:last-child {
-  margin-bottom: 30px;
+.dateDiv {
+  font-size: x-small;
+  color: greenyellow;
+
 }
-.messages .message.new {
-  transform: scale(0);
-  transform-origin: 0 0;
-  -webkit-animation: bounce 500ms linear both;
-  animation: bounce 500ms linear both;
-}
-.messages .message.loading::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  border: none;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
-}
-.messages .message.loading span {
-  display: block;
-  font-size: 0;
-  width: 20px;
-  height: 10px;
-  position: relative;
-}
-.messages .message.loading span::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  margin-left: -7px;
-}
-.messages .message.loading span::after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  margin-top: 4px;
-  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-  margin-left: 7px;
-  -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s;
+.messageWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+  padding: 7px;
+  padding-bottom: 5px;
+  height: 20px;
+
 }
 /*--------------------
   Message Box
@@ -1104,6 +1053,7 @@ Chat
   position: absolute;
   bottom: 10px;
 }
+
 .message-box .message-input {
   background: none;
   border: none;
@@ -1115,31 +1065,19 @@ Chat
   margin: 0;
   padding-right: 20px;
   width: 265px;
+  margin-bottom: 3%;
 }
+
 .message-box textarea:focus:-webkit-placeholder {
   color: transparent;
+
 }
-.message-box .message-close {
-  position: absolute;
-  z-index: 1;
-  top: 12px;
-  right: 48px;
-  color: #fff;
-  border: none;
-  background: #248a52;
-  font-size: 10px;
-  text-transform: uppercase;
-  line-height: 1;
-  padding: 6px 10px;
-  border-radius: 10px;
-  outline: none !important;
-  transition: background 0.2s ease;
-}
+
 .message-box .message-submit {
   position: absolute;
   z-index: 1;
-  top: 12px;
-  right: 48px;
+  top: 24px;
+  right: 28px;
   color: #fff;
   border: none;
   background: #248a52;
@@ -1151,22 +1089,13 @@ Chat
   outline: none !important;
   transition: background 0.2s ease;
 }
+
 .message-box .message-submit:hover {
   background: #1d7745;
 }
-/*--------------------
-  Custom Srollbar
-  --------------------*/
-.mCSB_scrollTools {
-  margin: 1px -3px 1px 0;
-  opacity: 0;
-}
-.mCSB_inside > .mCSB_container {
-  margin-right: 0px;
-  padding: 0 10px;
-}
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: rgba(0, 0, 0, 0.5) !important;
+
+input#msg{
+  margin-left: 10%;
 }
 /*--------------------
   Bounce
